--- a/css/style.css
+++ b/css/style.css
@@ -23,40 +23,7 @@ letter-spacing: 0.03em;
 color: black;
 }
 
-.footer-logo {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-/* identical to box height */
-color: #FFFFFF;
-letter-spacing: 0.03em;
-}
-
-.footer-Web {
-  font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-
-letter-spacing: 0.03em;
-color: #2196F3;
-}
-
-.header-studio {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color: #2196F3;
-}
-
-.header-contact {
+.header-link {
   font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
@@ -67,18 +34,11 @@ letter-spacing: 0.02em;
 color: #212121;
 }
 
-.header-email {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color: #2196F3;
+.header-link:hover{
+  color: #2196F3;
 }
 
-.header-number {
+.header-contact {
   font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
@@ -88,38 +48,30 @@ letter-spacing: 0.02em;
 
 color: #757575;
 }
-
-.header-portfolio {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color:black
+.header-contact:hover {
+  color: #2196F3;
 }
 
 .hero-button {
-  background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-}
-
-.hero-span {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
+  /* identical to box height, or 188% */
   
   display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   
+  background-color: #757575;
+  color: #2F303A;
+}
+
+.hero-button:hover {
+  background-color: #2196F3;
   color: #FFFFFF;
-  
 }
 
 .qualities-title {
@@ -206,7 +158,7 @@ letter-spacing: 0.03em;
 color: darkgrey;
 }
 
-.footer-email {
+.footer-contact {
   font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -224,11 +176,14 @@ font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
-/* or 171% */
 
 letter-spacing: 0.03em;
 
 color:darkgrey
+}
+
+.footer-contact:hover {
+  color: #2196F3;
 }
 
 .footer {
@@ -257,3 +212,25 @@ color: #FFFFFF;
 .team {
   background: #F5F4FA;
 }
+
+.footer-Web {
+  font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+
+letter-spacing: 0.03em;
+color: #2196F3;
+}
+
+.footer-logo {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  /* identical to box height */
+  color: #FFFFFF;
+  letter-spacing: 0.03em;
+  }
