--- a/css/reset.css
+++ b/css/reset.css
@@ -4,11 +4,7 @@ a{
 
 
 ul {
-  text-decoration: none;
-  padding: 0px;
+  list-style: none;
+  padding: 0;
   margin: 0;
-}
-
-li {
-  text-decoration: none;
 }
