--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,21 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
-/* identical to box height */
 
 letter-spacing: 0.03em;
 
 color: #2196F3;
+}
+
+
+.container {
+display: flex;
+align-items: center;
+}
+/*Header-section*/
+
+.header {
+  
 }
 
 .header-logo {
@@ -17,7 +27,6 @@ font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
-/* identical to box height */
 
 letter-spacing: 0.03em;
 color: black;
@@ -34,9 +43,11 @@ letter-spacing: 0.02em;
 color: #212121;
 }
 
+
 .header-link:hover{
   color: #2196F3;
 }
+
 
 .header-contact {
   font-family: 'Roboto';
@@ -52,27 +63,54 @@ color: #757575;
   color: #2196F3;
 }
 
+
+/*Header-section-end*/
+
+/*Hero-section*/
+
+
 .hero-button {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
-  /* identical to box height, or 188% */
-  
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
   
   background-color: #757575;
   color: #2F303A;
 }
 
+
+.hero-section {
+  background: #2F303A;
+}
+
+
+.hero-title {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 60px;
+
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+}
+
+
 .hero-button:hover {
   background-color: #2196F3;
   color: #FFFFFF;
 }
+
+
+/*Hero-section-end*/
+
+/*Qualities-section*/
+
 
 .qualities-title {
 font-family: 'Roboto';
@@ -86,6 +124,7 @@ text-transform: uppercase;
 color: #212121;
 }
 
+
 .qualities-text {
   font-family: 'Roboto';
 font-style: normal;
@@ -97,6 +136,12 @@ letter-spacing: 0.03em;
 
 color: #757575;
 }
+
+
+/*Qualities-section-end*/
+
+/*Work-section*/
+
 
 .work-title {
   font-family: 'Roboto';
@@ -110,6 +155,20 @@ letter-spacing: 0.03em;
 color: #212121;
 }
 
+.work-img {
+  display: flex;
+}
+
+/*Work-section-end*/
+
+/*Team-section*/
+
+
+.team {
+  background: #F5F4FA;
+}
+
+
 .team-title {
   font-family: 'Roboto';
 font-style: normal;
@@ -121,6 +180,7 @@ letter-spacing: 0.03em;
 
 color: #212121;
 }
+
 
 .team-text {
   font-family: 'Roboto';
@@ -134,7 +194,8 @@ letter-spacing: 0.03em;
 color: #212121;
 }
 
-.team-position {
+
+.team-person {
   font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -145,6 +206,18 @@ letter-spacing: 0.03em;
 
 color: #757575;
 }
+
+
+/*Team-section-end*/
+
+
+/*Footer-section*/
+
+
+.footer {
+  background-color: #212121;
+}
+
 
 .footer-address {
   font-family: 'Roboto';
@@ -158,17 +231,6 @@ letter-spacing: 0.03em;
 color: darkgrey;
 }
 
-.footer-contact {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-
-letter-spacing: 0.03em;
-
-color: darkgrey;
-}
 
 .footer-contact {
   font-family: 'Roboto';
@@ -182,36 +244,11 @@ letter-spacing: 0.03em;
 color:darkgrey
 }
 
+
 .footer-contact:hover {
   color: #2196F3;
 }
 
-.footer {
-  background-color: #212121;
-}
-
-.hero-section {
-  background: #2F303A;
-}
-
-.hero-title {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 900;
-font-size: 44px;
-line-height: 60px;
-/* or 136% */
-
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-
-color: #FFFFFF;
-}
-
-.team {
-  background: #F5F4FA;
-}
 
 .footer-Web {
   font-family: 'Raleway';
@@ -224,6 +261,7 @@ letter-spacing: 0.03em;
 color: #2196F3;
 }
 
+
 .footer-logo {
   font-family: 'Raleway';
   font-style: normal;
@@ -234,3 +272,6 @@ color: #2196F3;
   color: #FFFFFF;
   letter-spacing: 0.03em;
   }
+
+
+  /*Footer-section-end*/
