--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.header .container {
+  display: flex;
+}
 .Web {
 font-family: 'Raleway';
 font-style: normal;
@@ -12,7 +15,7 @@ color: #2196F3;
 
 /*Header-section*/
 
-.header {
+.container:nth-child(1) {
   display: flex;
 }
 
@@ -124,6 +127,10 @@ line-height: 24px;
 letter-spacing: 0.03em;
 
 color: #757575;
+}
+
+.qualities-list {
+  display: flex;
 }
 
 /*Qualities-section-end*/
