--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,34 @@
 .header .container {
+  height: 80px;
+  width: 100%;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
+.header-pages {
+
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .Web {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
+  display: flex;
+  justify-content: flex-end;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: #2196F3;
+  margin-right: 93px;
+}
 
-letter-spacing: 0.03em;
-
-color: #2196F3;
+.header-contact {
+  display: flex;
+  justify-content: space-evenly;
+  flex: 2;
 }
 
 /*Header-section*/
@@ -20,47 +38,56 @@ color: #2196F3;
 }
 
 .header-logo {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
 
-letter-spacing: 0.03em;
-color: black;
-}
-
-.header-pages {
-display: flex;
+  letter-spacing: 0.03em;
+  color: black;
 }
 
 .header-link {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
 
-color: #212121;
+  color: #212121;
 }
 
-.header-link:hover{
+.header-link:hover {
   color: #2196F3;
+}
+
+.header-contacts {
+  display: flex;
+  margin-left: auto;
 }
 
 .header-contact {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color: #757575;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
+
+.header-item:nth-child(2) {
+  margin-left: 50px;
+}
+
 .header-contact:hover {
   color: #2196F3;
+}
+
+.header-list:not(:first-child) {
+  margin-left: 55px;
 }
 
 /*Header-section-end*/
@@ -71,29 +98,36 @@ color: #757575;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
   line-height: 30px;
-  
   background-color: #757575;
-  color: #2F303A
+  color: #2F303A;
+  height: 50px;
+  width: 200px;
 }
 
-.hero-section {
+.hero-section .container {
   background: #2F303A;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 900;
-font-size: 44px;
-line-height: 60px;
-
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-
-color: #FFFFFF;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  justify-content: space-evenly;
+  display: flex;
+  color: #FFFFFF;
 }
 
 .hero-button:hover {
@@ -106,31 +140,46 @@ color: #FFFFFF;
 /*Qualities-section*/
 
 .qualities-title {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-color: #212121;
+  color: #212121;
+}
+
+.qualities-section .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .qualities-text {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 
-letter-spacing: 0.03em;
+  letter-spacing: 0.03em;
 
-color: #757575;
+  color: #757575;
+}
+
+.qualities-item {
+  margin: 30px;
 }
 
 .qualities-list {
   display: flex;
+  flex-direction: row;
 }
 
 /*Qualities-section-end*/
@@ -139,68 +188,105 @@ color: #757575;
 
 .work-title {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
-letter-spacing: 0.03em;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-color: #212121;
+  color: #212121;
+}
+
+.work-section .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 94px;
+}
+
+.work-item {
+  padding-left: 30px;
 }
 
 .work-list {
   display: flex;
-  padding-left: 10px;
-  align-content: space-around;
+}
+
+.work-img {
+  width: 370px;
+  height: 294px;
 }
 
 /*Work-section-end*/
 
 /*Team-section*/
 
-.team-section {
-  background: #F5F4FA;
-}
-
 .team-list {
   display: flex;
 }
 
+.team-item {
+  margin-left: 30px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+}
+
+.team-img {
+  width: 270px;
+  height: 260px;
+}
+
 .team-title {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
-letter-spacing: 0.03em;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-color: #212121;
+  color: #212121;
 }
 
 .team-text {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 19px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 
-letter-spacing: 0.03em;
+  letter-spacing: 0.03em;
 
-color: #212121;
+  color: #212121;
 }
 
 .team-person {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
 
-letter-spacing: 0.03em;
+  letter-spacing: 0.03em;
 
-color: #757575;
+  color: #757575;
+}
+
+.team-section .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background: #F5F4FA;
+  padding-bottom: 94px;
+  padding-top: 94px;
 }
 
 /*Team-section-end*/
@@ -208,35 +294,32 @@ color: #757575;
 /*Footer-section*/
 
 .footer {
-  background-color: #212121;
+  background: #212121
 }
 
-.footer-section {
+.footer-list {
   display: flex;
+  flex-direction: column;
 }
 
 .footer-address {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-
-letter-spacing: 0.03em;
-
-color: darkgrey;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: darkgrey;
 }
 
 .footer-contact {
   font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-
-letter-spacing: 0.03em;
-
-color:darkgrey
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: darkgrey;
 }
 
 .footer-contact:hover {
@@ -245,13 +328,12 @@ color:darkgrey
 
 .footer-Web {
   font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-
-letter-spacing: 0.03em;
-color: #2196F3;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: #2196F3;
 }
 
 .footer-logo {
@@ -259,10 +341,16 @@ color: #2196F3;
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
-
   color: #FFFFFF;
-  letter-spacing: 0.03em;
-  }
+}
 
-  /*Footer-section-end*/
+.footer-section .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 215px;
+  
+}
+
+/*Footer-section-end*/
