--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,24 +1,24 @@
+/*Header-section-start*/
+.header .container {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .Web {
+  display: flex;
+  justify-content: flex-end;
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 31px;
-
   letter-spacing: 0.03em;
-
   color: #2196F3;
+  margin-right: 93px;
 }
-
-.container {
-  display: flex;
-}
-
-.card-section {
-  box-shadow: inset;
-}
-
-/*Header-section*/
 
 .header-logo {
   font-family: 'Raleway';
@@ -26,12 +26,22 @@
   font-weight: 700;
   font-size: 26px;
   line-height: 31px;
-
   letter-spacing: 0.03em;
-
   color: black;
 }
 
+.header-pages {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header-item {
+  margin-left: 55px;
+}
+
+.header-item:nth-child(2) {
+  margin-left: 50px;
+}
 
 .header-link {
   font-family: 'Roboto';
@@ -40,15 +50,22 @@
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-
   color: #212121;
 }
-
 
 .header-link:hover {
   color: #2196F3;
 }
 
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.header-contacts .header-item {
+  display: flex;
+}
 
 .header-contact {
   font-family: 'Roboto';
@@ -57,7 +74,6 @@
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-
   color: #757575;
 }
 
@@ -66,45 +82,65 @@
   color: #2196F3;
 }
 
-
-.header-number {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-
-  color: #757575;
-}
-
 /*Header-section-end*/
 
 /*Buttons-section*/
+
+.buttons-section .container {
+  background: #FFFFFF;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+
+.buttons-list {
+display: flex;
+flex-direction: row;
+justify-content: center;
+}
 
 .buttons-items:hover {
   background-color: #2196F3;
 }
 
-.buttons-item {
+.buttons-items {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-
-  display: flex;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: #F5F4FA;
+  font-weight: 700;
+  line-height: 30px;
+  color: #212121;
+  padding: 6px 23px;
+  border-radius: 4px;
+  border: none;
+  margin-left: 8px;
+  cursor: pointer;
 }
 
+.buttons-items:hover {
+  background-color: #2196F3;
+  color: #FFFFFF;
+}
 
 /*Button-section-end*/
 
 /*Poster-section*/
 
+.poster-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.poster-item {
+  width: 370px;
+  height: 404px;
+  margin: 15px;
+  border: 1px solid #EEEEEE;
+}
 
 .poster-text {
   font-family: 'Roboto';
@@ -112,12 +148,11 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
-
   letter-spacing: 0.06em;
-
   color: #212121;
+  margin: 0 24px;
+  margin-top: 16px;
 }
-
 
 .poster-description {
   font-family: 'Roboto';
@@ -125,10 +160,9 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
-
   letter-spacing: 0.03em;
-
   color: #757575;
+  margin: 0 24px;
 }
 
 
@@ -136,37 +170,14 @@
 
 /*Footer-section*/
 
-
 .footer {
-  background: #2F303A;
+  background: #212121
 }
 
-
-.footer-Web {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-
-  letter-spacing: 0.03em;
-
-  color: #2196F3;
+.footer-list {
+  display: flex;
+  flex-direction: column;
 }
-
-
-.footer-logo {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-
-  letter-spacing: 0.03em;
-
-  color: #FFFFFF;
-}
-
 
 .footer-address {
   font-family: 'Roboto';
@@ -174,17 +185,9 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-
   letter-spacing: 0.03em;
-
-  color: #FFFFFF;
+  color: darkgrey;
 }
-
-
-.footer-contact:hover {
-  color: #757575;
-}
-
 
 .footer-contact {
   font-family: 'Roboto';
@@ -192,10 +195,38 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-
   letter-spacing: 0.03em;
+  color: darkgrey;
+}
 
-  color: darkgrey
+.footer-contact:hover {
+  color: #2196F3;
+}
+
+.footer-Web {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: #2196F3;
+}
+
+.footer-logo {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  color: #FFFFFF;
+}
+
+.footer-section .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 215px;
 }
 
 /*Footer-section-end*/
