--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,6 @@
 }
 
 .hero-section .container {
-  background: #2F303A;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -106,11 +105,7 @@
   justify-content: center;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image:-moz-linear-gradient()
-}
-
-.hero-section {
-  
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/img-2/Img.jpg);
 }
 
 .hero-title {
