--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*Header-section-start*/
+
 .header .container {
   height: 80px;
   width: 100%;
@@ -53,6 +54,11 @@
   color: #212121;
 }
 
+.header-svg {
+  width: 16px;
+  height: 12px;
+}
+
 .header-link:hover {
   color: #2196F3;
 }
@@ -77,6 +83,9 @@
   color: #757575;
 }
 
+.header-link:hover {
+  fill: #2196F3;
+}
 
 .header-contact:hover {
   color: #2196F3;
@@ -255,6 +264,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
+  padding-bottom: 30px;
 }
 
 .team-img {
@@ -272,6 +282,41 @@
   letter-spacing: 0.03em;
 
   color: #212121;
+}
+
+.team-svg {
+  width: 20px;
+  height: 20px;
+}
+
+.team-link {
+  fill: #AFB1B8;
+}
+
+.team-svg:hover {
+  fill: #FFFFFF;
+}
+
+.team-svg-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.team-svg-item {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.team-svg-item:hover {
+  background: #2196F3;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .team-text {
@@ -303,12 +348,74 @@
   flex-direction: column;
   justify-content: center;
   background: #F5F4FA;
-  padding-bottom: 94px;
+  padding-bottom: 115px;
   padding-top: 94px;
   box-shadow: 0 2px 1px black;
 }
 
 /*Team-section-end*/
+
+/*Client-section-start*/
+
+.client-section .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background: #E5E5E5;
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.client-list {
+  display: flex;
+}
+
+.client-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.client-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30px;
+}
+
+.client-svg {
+  width: 41px;
+  height: 42.6px;
+  fill: #AFB1B8;
+}
+
+.client-svg:hover {
+  fill: #2196F3;
+}
+
+.client-link {
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  width: 170px;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+}
+
+.client-link:hover {
+  border: 1px solid #2196F3;
+}
+
+/*Client-section-end*/
 
 /*Footer-section-start*/
 
@@ -339,6 +446,52 @@
   line-height: 24px;
   letter-spacing: 0.03em;
   color: darkgrey;
+}
+
+.footer-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16.41px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #FFFFFF;
+}
+
+.footer-svg {
+  width: 20px;
+  height: 20px;
+  fill: #FFFFFF;
+}
+
+.footer-link {
+  fill: #FFFFFF
+}
+
+.footer-svg-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer-svg-item {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #757575;
+  border-radius: 50%;
+}
+
+.footer-svg-item:hover {
+  background: #2196F3;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-contact:hover {
