--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,14 @@
+.container {
+  font-family: 'Roboto';
+}
+
 /*Header-section-start*/
+
+.header .container {
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
 .header .container {
   height: 80px;
   width: 100%;
@@ -53,8 +63,16 @@
   color: #212121;
 }
 
-.header-link:hover {
+.header-svg, .header-svg-use {
+  width: 20px;
+  height: 18px;
+  fill: gray;
+  margin-right: 10px;
+}
+
+.header-item:hover .header-svg-use, .header-item:hover .header-contact, .header-link:hover {
   color: #2196F3;
+  fill: #2196F3;
 }
 
 .header-contacts {
@@ -77,6 +95,9 @@
   color: #757575;
 }
 
+.header-link:hover {
+  fill: #2196F3;
+}
 
 .header-contact:hover {
   color: #2196F3;
@@ -117,7 +138,9 @@
   border-radius: 4px;
   border: none;
   margin-left: 8px;
+  border-radius: 4px 4px 4px 4px;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms ,background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
 .buttons-items:hover {
@@ -172,17 +195,20 @@
 /*Footer-section*/
 
 .footer {
-  background: #212121
-}
-
-.footer-list {
-  display: flex;
-  flex-direction: column;
+  background: #2F303A;
+  font-family: 'Roboto';
+  font-weight: 700;
 }
 
 .footer-address {
-  font-family: 'Roboto';
-  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: white
+}
+
+.footer-contact {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -190,14 +216,45 @@
   color: darkgrey;
 }
 
-.footer-contact {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
+.footer-title {
+  font-weight: 700;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 16.41px;
+  text-align: center;
   letter-spacing: 0.03em;
-  color: darkgrey;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+.footer-svg {
+  width: 20px;
+  height: 20px;
+  fill: #FFFFFF;
+}
+
+.footer-svg-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer-svg-item {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #454045;
+  border-radius: 50%;
+}
+
+.footer-svg-item:hover {
+  background: #2196F3;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-contact:hover {
@@ -216,9 +273,6 @@
 
 .footer-logo {
   font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
   color: #FFFFFF;
 }
 
@@ -226,7 +280,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 70px;
   margin-left: 215px;
 }
 
