--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,14 @@
   margin-left: 55px;
 }
 
+.header-svg {
+  width: 20px;
+  height: 18px;
+  fill: gray;
+  margin-right: 10px;
+}
+
+
 .header-item:nth-child(2) {
   margin-left: 50px;
 }
@@ -54,13 +62,10 @@
   color: #212121;
 }
 
-.header-svg {
-  width: 16px;
-  height: 12px;
-}
 
-.header-link:hover {
+.header-item:hover .header-svg-use, .header-item:hover .header-contact, .header-link:hover {
   color: #2196F3;
+  fill: #2196F3;
 }
 
 .header-contacts {
@@ -100,10 +105,13 @@
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
-  background-color: #757575;
-  color: #2F303A;
+  background-color: #4e4b4b;
+  color: #777784;
   height: 50px;
   width: 200px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 2px #444242;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms ,background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
 .hero-section .container {
@@ -129,6 +137,7 @@
   justify-content: space-evenly;
   display: flex;
   color: #FFFFFF;
+  cursor: auto;
 }
 
 .hero-button:hover {
@@ -237,8 +246,23 @@
   padding-bottom: 94px;
 }
 
+.work-item:not(:first-child) {
+  margin-left: 30px;
+}
+
 .work-item {
-  padding-left: 30px;
+  position: relative;
+}
+
+.work-text {
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  background: #2F303ACC;
+  color: #FFFFFF;
+  height: 70px;
+  text-align: center;
 }
 
 .work-list {
@@ -248,6 +272,27 @@
 .work-img {
   width: 370px;
   height: 294px;
+}
+
+.work-script {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: #FFFFFF;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-family: 'Roboto';
+  font-weight: 700;
+}
+
+.work-text {
+  text-align: center;
+  font-family: 'Roboto';
+  font-weight: 700;
+  position: absolute;
 }
 
 /*Work-section-end*/
@@ -293,10 +338,6 @@
   fill: #AFB1B8;
 }
 
-.team-svg:hover {
-  fill: #FFFFFF;
-}
-
 .team-svg-list {
   display: flex;
   justify-content: center;
@@ -319,16 +360,20 @@
   align-items: center;
 }
 
+.team-svg-item:hover .team-svg-use {
+  background:#2196F3;
+  fill: #FFFFFF;
+}
+
 .team-text {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
-
   letter-spacing: 0.03em;
-
   color: #212121;
+  padding-bottom: 16px;
 }
 
 .team-person {
@@ -339,6 +384,7 @@
   line-height: 19px;
   letter-spacing: 0.03em;
   color: #757575;
+  padding-bottom: 10px;
 }
 
 .team-section .container {
@@ -363,13 +409,18 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background: #E5E5E5;
+  background: #FFFFFF;
   padding-bottom: 94px;
   padding-top: 94px;
 }
 
 .client-list {
   display: flex;
+}
+
+.client-item:hover .client-svg-use {
+  color: #2196F3;
+  fill: #2196F3;
 }
 
 .client-title {
@@ -420,27 +471,20 @@
 /*Footer-section-start*/
 
 .footer {
-  background: #212121
-}
-
-.footer-list {
-  display: flex;
-  flex-direction: column;
+  background: #2F303A;
+  font-family: 'Roboto';
+  font-weight: 700;
 }
 
 .footer-address {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: darkgrey;
+  color: white
 }
 
 .footer-contact {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -449,15 +493,13 @@
 }
 
 .footer-title {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 16.41px;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #FFFFFF;
+  margin-bottom: 20px;
 }
 
 .footer-svg {
@@ -466,13 +508,10 @@
   fill: #FFFFFF;
 }
 
-.footer-link {
-  fill: #FFFFFF
-}
-
 .footer-svg-list {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
@@ -482,7 +521,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #757575;
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
 
@@ -510,9 +549,6 @@
 
 .footer-logo {
   font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
   color: #FFFFFF;
 }
 
@@ -520,7 +556,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 70px;
   margin-left: 215px;
 }
 
