--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,22 @@
   margin-left: 55px;
 }
 
+.header-line {
+  background-color: #2196F3;
+  
+}
+
+.header-line::after {
+  position: absolute;
+  bottom: -33px;
+  right: 0px;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-accent);
+  border-radius: 2px;
+}
+
 .header-svg {
   width: 20px;
   height: 18px;
@@ -262,7 +278,9 @@
   background: #2F303ACC;
   color: #FFFFFF;
   height: 70px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .work-list {
