--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -70,6 +70,18 @@
   margin-right: 10px;
 }
 
+.header-item:nth-child(2) {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  border-bottom: 4px solid #2196F3;
+  padding-bottom: 28px;
+}
+
 .header-item:hover .header-svg-use, .header-item:hover .header-contact, .header-link:hover {
   color: #2196F3;
   fill: #2196F3;
@@ -102,7 +114,6 @@
 .header-contact:hover {
   color: #2196F3;
 }
-
 /*Header-section-end*/
 
 /*Buttons-section*/
@@ -164,6 +175,20 @@
   height: 404px;
   margin: 15px;
   border: 1px solid #EEEEEE;
+  cursor: pointer;
+}
+
+.poster-item:hover .poster-img, .poster-item:hover .poster-item {
+  background: rgba(33, 150, 243, 0.9);
+}
+
+.poster-item:hover {
+  border: 1px solid #EEEEEE;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.poster-img {
+  background-image: url();
 }
 
 .poster-text {
