--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,6 +68,7 @@
   height: 18px;
   fill: gray;
   margin-right: 10px;
+  margin-left: 30px;
 }
 
 .header-item:nth-child(2) {
@@ -82,10 +83,11 @@
   padding-bottom: 28px;
 }
 
-.header-item:hover .header-svg-use, .header-item:hover .header-contact, .header-link:hover {
+.header-media-item:hover .header-svg-use, .header-media-item:hover .header-contact {
   color: #2196F3;
   fill: #2196F3;
 }
+
 
 .header-contacts {
   display: flex;
