--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@
   height: 18px;
   fill: gray;
   margin-right: 10px;
+  margin-left: 30px;
 }
 
 .header-link::after {
@@ -99,7 +100,7 @@
   color: #212121;
 }
 
-.header-item:hover .header-svg-use, .header-item:hover .header-contact, .header-link:hover {
+.header-media-item:hover .header-svg-use, .header-media-item:hover .header-contact {
   color: #2196F3;
   fill: #2196F3;
 }
