--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -268,7 +268,8 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: white
+  color: white;
+  margin-bottom: 9px;
 }
 
 .footer-contact {
@@ -278,13 +279,17 @@
   letter-spacing: 0.03em;
   color: darkgrey;
   transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
+  margin-bottom: 30px;
+}
+
+.footer-item {
+  margin-bottom: 9px;
 }
 
 .footer-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16.41px;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   margin-bottom: 20px;
@@ -314,6 +319,9 @@
   transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
+.footer-social {
+  margin-left: 70px;
+}
 
 .footer-media-use {
   fill: #FFFFFF;
@@ -327,15 +335,13 @@
 }
 
 .footer-media {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  margin-left: 93px;
 }
 
 .footer-media-text {
   color: #FFFFFF;
   font-family: 'Roboto';
+  margin-bottom: 20px;
 }
 
 .footer-input {
@@ -344,6 +350,9 @@
   width: 358px;
   height: 50px;
   margin-right: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 
 .footer-form {
@@ -381,6 +390,7 @@
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  margin-bottom: 20px;
 }
 
 .footer-logo {
@@ -393,7 +403,6 @@
   padding-bottom: 60px;
   display: flex;
   flex-wrap: wrap;
-  gap: 70px;
 }
 
 /*Footer-section-end*/
