--- a/css/reset.css
+++ b/css/reset.css
@@ -2,10 +2,13 @@ a {
   text-decoration: none;
 }
 
-
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
