--- a/css/style.css
+++ b/css/style.css
@@ -93,15 +93,15 @@
   color: #212121;
 }
 
-.header-link, .header-contact {
+.header-contact {
   transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
 }
 
-.header-svg, .header-svg-use {
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms,;
+.header-svg {
+  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
 }
 
-.header-media-item:hover .header-svg-use, .header-media-item:hover .header-contact {
+.header-media-item:hover .header-svg, .header-media-item:hover .header-contact {
   color: #2196F3;
   fill: #2196F3;
 }
@@ -530,14 +530,12 @@
 .team-svg {
   width: 20px;
   height: 20px;
+  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
 }
 
 .team-link {
   fill: #AFB1B8;
-}
-
-.team-svg, .team-svg-use {
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+  background: none;
 }
 
 .team-svg-list {
@@ -564,8 +562,8 @@
   align-items: center;
 }
 
-.team-svg-item:hover .team-svg-use {
-  background:#2196F3;
+
+.team-svg-item:hover .team-svg{
   fill: #FFFFFF;
 }
 
@@ -622,7 +620,7 @@
   display: flex;
 }
 
-.client-item:hover .client-svg-use {
+.client-item:hover .client-svg {
   color: #2196F3;
   fill: #2196F3;
 }
@@ -650,10 +648,7 @@
   width: 41px;
   height: 42.6px;
   fill: #AFB1B8;
-}
-
-.client-svg:hover {
-  fill: #2196F3;
+  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
 }
 
 .client-link {
@@ -672,10 +667,6 @@
   border: 1px solid #2196F3;
 }
 
-.client-svg, .client-svg-use {
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
-}
-
 /*Client-section-end*/
 
 /*Footer-section-start*/
@@ -691,7 +682,8 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: white
+  color: white;
+  margin-bottom: 9px;
 }
 
 .footer-contact {
@@ -700,14 +692,13 @@
   line-height: 24px;
   letter-spacing: 0.03em;
   color: darkgrey;
-  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100msv;
+  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
 .footer-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16.41px;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   margin-bottom: 20px;
@@ -757,6 +748,11 @@
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  margin-bottom: 20px;
+}
+
+.footer-social {
+  margin-left: 70px;
 }
 
 .footer-logo {
@@ -776,15 +772,13 @@
 }
 
 .footer-media {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  margin-left: 93px;
 }
 
 .footer-media-text {
   color: #FFFFFF;
   font-family: 'Roboto';
+  margin-bottom: 20px;
 }
 
 .footer-input {
@@ -793,6 +787,10 @@
   width: 358px;
   height: 50px;
   margin-right: 10px;
+}
+
+.footer-item {
+  margin-top: 9px;
 }
 
 .footer-form {
@@ -816,7 +814,6 @@
   padding-bottom: 60px;
   display: flex;
   flex-wrap: wrap;
-  gap: 70px;
 }
 
 /*Footer-section-end*/
