--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,8 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: white
+  color: white;
+  margin-bottom: 9px;
 }
 
 .footer-contact {
@@ -697,14 +698,13 @@
   line-height: 24px;
   letter-spacing: 0.03em;
   color: darkgrey;
-  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100msv;
+  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
 .footer-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16.41px;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   margin-bottom: 20px;
@@ -754,6 +754,11 @@
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  margin-bottom: 20px;
+}
+
+.footer-social {
+  margin-left: 70px;
 }
 
 .footer-logo {
@@ -773,15 +778,13 @@
 }
 
 .footer-media {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  margin-left: 93px;
 }
 
 .footer-media-text {
   color: #FFFFFF;
   font-family: 'Roboto';
+  margin-bottom: 20px;
 }
 
 .footer-input {
@@ -790,6 +793,10 @@
   width: 358px;
   height: 50px;
   margin-right: 10px;
+}
+
+.footer-item {
+  margin-top: 9px;
 }
 
 .footer-form {
