--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -166,6 +166,7 @@
   margin-left: 8px;
   border-radius: 4px 4px 4px 4px;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms ,background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
 .buttons-items:hover {
@@ -255,7 +256,7 @@
 
 /*Poster-section-end*/
 
-/*Footer-section*/
+/*Footer-section-start*/
 
 .footer {
   background: #2F303A;
@@ -268,7 +269,8 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: white
+  color: white;
+  margin-bottom: 9px;
 }
 
 .footer-contact {
@@ -284,7 +286,6 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 16.41px;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   margin-bottom: 20px;
@@ -309,58 +310,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #454045;
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
 }
 
-
-.footer-media-use {
-  fill: #FFFFFF;
-}
-
-.footer-media-svg {
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  padding-right: 13px;
-}
-
-.footer-media {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.footer-media-text {
-  color: #FFFFFF;
-  font-family: 'Roboto';
-}
-
-.footer-input {
-  background: #2F303A;
-  border: 1px solid #FFFFFF4D;
-  width: 358px;
-  height: 50px;
-  margin-right: 10px;
-}
-
-.footer-form {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.footer-media-button {
-  border: none;
-  background: #2196F3;
-  color: #FFFFFF;
-  width: 200px;
-  height: 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
 .footer-svg-item:hover {
   background: #2196F3;
   border-radius: 50%;
@@ -381,6 +335,11 @@
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  margin-bottom: 20px;
+}
+
+.footer-social {
+  margin-left: 70px;
 }
 
 .footer-logo {
@@ -388,12 +347,60 @@
   color: #FFFFFF;
 }
 
+.footer-media-use {
+  fill: #FFFFFF;
+}
+
+.footer-media-svg {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  padding-right: 13px;
+}
+
+.footer-media {
+  margin-left: 93px;
+}
+
+.footer-media-text {
+  color: #FFFFFF;
+  font-family: 'Roboto';
+  margin-bottom: 20px;
+}
+
+.footer-input {
+  background: #2F303A;
+  border: 1px solid #FFFFFF4D;
+  width: 358px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.footer-item {
+  margin-top: 9px;
+}
+
+.footer-form {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.footer-media-button {
+  border: none;
+  background: #2196F3;
+  color: #FFFFFF;
+  width: 200px;
+  height: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
 .footer-section .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
   flex-wrap: wrap;
-  gap: 70px;
 }
 
 /*Footer-section-end*/
